# Bruce_framework

./: .gitignore  AGENTX.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  USAGE.md  index.html  pyproject.toml  try.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: pages.yml  test.yml
Bruce_Framework/: ChatModel.py  Tools.py
Bruce_Framework/Agents/: Agent.py  promptTemplate.yaml
Bruce_Framework/Runner/: AgentRun.py
agentx_dev/: AsyncTools.py  AutoSetup.py  Cache.py  ChatModel.py  Compiler.py  Config.py  DefaultTools.py  Embeddings.py  Evals.py  Handoffs.py  Loader.py  MCP.py  Memory.py  Observability.py  Planner.py  Session.py  Splitters.py  Streaming.py  Supervisor.py  Tools.py  WebTools.py  __init__.py  promptTemplate.yaml
agentx_dev/Agents/: Agent.py  __init__.py
agentx_dev/Runner/: AgentRun.py  AsyncAgentRun.py  __init__.py
agentx_dev/VectorStores/: __init__.py  chroma_store.py  pg_store.py  qdrant_store.py
agentx_dev/resources/: __init__.py  promptTemplate.yaml
brand/: BRAND.md  index.html
docs/: README.md  getting-started.md  use-cases.md
docs/advanced/: batch-api.md  evals.md  handoffs.md  memory.md  parallel-tools.md  production-controls.md  prompt-caching.md  prompt-optimization.md  rag.md  supervisor.md  trace-viewer.md  vector-store-adapters.md
docs/concepts/: agents.md  models.md  observability.md  permissions.md  tools.md
docs/cookbook/: faq.md  patterns.md  troubleshooting.md
docs/guides/: custom-tools.md  file-agent.md  mcp.md  sessions.md  streaming.md  structured-output.md  yaml-config.md
docs/reference/: api-summary.md
docs/superpowers/plans/: 2026-05-15-agentx-overhaul.md
examples/: README.md  agentic_rag_demo.py  async_example.py  async_quickstart.py  auto_features_example.py  caching_example.py  chatbot_example.py  complete_example.py  concurrent_example.py  concurrent_tool_example.py  file_agent_demo.py  function_calling_demo.py  mcp_demo.py  observability_example.py  orchestration_demo.py  planner_example.py  supervisor_codebase_analysis_demo.py  supervisor_example.py  sync_quickstart.py  v3_1_1_features_demo.py  v3_1_comprehensive_demo.py  v3_1_features_demo.py
host/: README.md  app.js  build_data.py  data.js  index.html  style.css
tests/: conftest.py  smoke_test.py  test_batch_concurrent_integration.py  test_budgets.py  test_chatmodel.py  test_embeddings.py  test_evals.py  test_handoffs.py  test_parser.py  test_permissions.py  test_planner.py  test_runner.py  test_runner_loop.py  test_splitters.py  test_supervisor.py  test_tool_registry.py  test_tools.py  test_vectorstore_adapters.py
viewer/: README.md  app.js  index.html  style.css
