[project]

name = "agentx-dev"
version = "3.1.3"
description = "A production-grade Python framework for building LLM agents. Multi-provider chat, permission-gated tools, RAG (in-mem + Chroma/Qdrant/pgvector), semantic memory, Supervisor + Handoffs multi-agent orchestration with streaming, evals harness, prompt caching, Batch API, prompt-optimizer, MCP integration."
authors = [{ name = "Bruce-Arhin Shadrach", email = "brucearhin098@gmail.com" }]
# Best practice: link to the license file
license = { file = "LICENSE" }
readme = "README.md"
# Codebase uses PEP 604 union types (str | None) which require 3.10+.
requires-python = ">=3.10"

# Core runtime — every install pulls these. Kept minimal; provider SDKs
# and MCP are optional extras below so an OpenAI-only user doesn't pull
# in Anthropic + MCP transitives they'll never use.
dependencies = [
    "openai>=1.0.0",       # ChatModel.GPT + native tool-calling API
    "pydantic>=2.0",       # StructuredTool schemas, output parsing, everywhere
    "PyYAML>=5.3.1",       # AgentType prompt templates (>=5.3.1 for CVE fixes)
    "rich>=10.0",          # console output in the Agents module
]

[project.optional-dependencies]
# `pip install agentx-dev[anthropic]` — enables agentx_dev.Claude
anthropic = ["anthropic>=0.36"]     # 3.1 needs Batch API + prompt cache
# `pip install agentx-dev[mcp]` — enables MCPClient (stdio / sse / http)
mcp = ["mcp>=0.1"]
# `pip install agentx-dev[otel]` — enables the OTelHook observability adapter
otel = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]
# `pip install agentx-dev[chroma]` — ChromaVectorStore adapter
chroma = ["chromadb>=0.4"]
# `pip install agentx-dev[qdrant]` — QdrantVectorStore adapter
qdrant = ["qdrant-client>=1.6"]
# `pip install agentx-dev[pgvector]` — PgVectorStore adapter (psycopg v3)
pgvector = ["psycopg[binary]>=3.1"]
# `pip install agentx-dev[dev]` — everything needed to run the tests
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "numpy>=1.24",
]
# `pip install agentx-dev[all]` — the works
all = [
    "anthropic>=0.36",
    "mcp>=0.1",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "chromadb>=0.4",
    "qdrant-client>=1.6",
    "psycopg[binary]>=3.1",
]

[project.urls]
Homepage = "https://github.com/shadrach098/Bruce_framework"
"Bug Tracker" = "https://github.com/shadrach098/Bruce_framework/issues"
Source = "https://github.com/shadrach098/Bruce_framework"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
# In pyproject.toml

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]



